--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="img-container">
         <div class="container">
           <h2 class="img-title">What are we doing</h2>
           <ul class="list foto">
