--- a/portfolio.html
+++ b/portfolio.html
@@ -72,8 +72,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="img-body">Banking App Interface Concept</h2>
-                <p class="img-parag">App</p>
+                <div class="img-list">
+                  <h2 class="img-body">Banking App Interface Concept</h2>
+                  <p class="img-parag">App</p>
+                </div>
               </a>
             </li>
             <li class="link img-text">
@@ -84,8 +86,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="img-body">Cashless Payment</h2>
-                <p class="img-parag">Marketing</p>
+                <div class="img-list">
+                  <h2 class="img-body">Cashless Payment</h2>
+                  <p class="img-parag">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="link img-text">
@@ -96,8 +100,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="img-body">Meditation App</h2>
-                <p class="img-parag">App</p>
+                <div class="img-list">
+                  <h2 class="img-body">Meditation App</h2>
+                  <p class="img-parag">App</p>
+                </div>
               </a>
             </li>
             <li class="link img-text">
@@ -108,8 +114,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="img-body">Taxi Service</h2>
-                <p class="img-parag">Marketing</p>
+                <div class="img-list">
+                  <h2 class="img-body">Taxi Service</h2>
+                  <p class="img-parag">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="link img-text">
@@ -120,8 +128,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="img-body">Screen Illustrations</h2>
-                <p class="img-parag">Design</p>
+                <div class="img-list">
+                  <h2 class="img-body">Screen Illustrations</h2>
+                  <p class="img-parag">Design</p>
+                </div>
               </a>
             </li>
             <li class="link img-text">
@@ -132,8 +142,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="img-body">Online Courses</h2>
-                <p class="img-parag">Marketing</p>
+                <div class="img-list">
+                  <h2 class="img-body">Online Courses</h2>
+                  <p class="img-parag">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="link img-text">
@@ -144,8 +156,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="img-body">Instagram Stories Concept</h2>
-                <p class="img-parag">Design</p>
+                <div class="img-list">
+                  <h2 class="img-body">Instagram Stories Concept</h2>
+                  <p class="img-parag">Design</p>
+                </div>
               </a>
             </li>
             <li class="link img-text">
@@ -156,8 +170,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="img-body">Organic Food</h2>
-                <p class="img-parag">Web Site</p>
+                <div class="img-list">
+                  <h2 class="img-body">Organic Food</h2>
+                  <p class="img-parag">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="link img-text">
@@ -168,8 +184,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="img-body">Fresh Coffee</h2>
-                <p class="img-parag">Web Site</p>
+                <div class="img-list">
+                  <h2 class="img-body">Fresh Coffee</h2>
+                  <p class="img-parag">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
