--- a/index.html
+++ b/index.html
@@ -63,30 +63,30 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2 hidden class="title-section"></h2>
+          <h2 class="title-section">Web Studio</h2>
           <ul class="content list">
-            <li>
+            <li class="content-list">
               <h3 class="content-title">Strategy</h3>
               <p class="content-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="content-list">
               <h3 class="content-title">Punctuality</h3>
               <p class="content-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="content-list">
               <h3 class="content-title">Diligence</h3>
               <p class="content-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="content-list">
               <h3 class="content-title">Technologies</h3>
               <p class="content-text">
                 Design practice focused on digital experiences. We bring forth a
