--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
     <main>
       <section class="button">
         <div class="container">
-          <h1 hidden class="imagess">bnt</h1>
+          <h1 class="title-section">Portfolio</h1>
           <ul class="list button-list">
             <li><button type="button" class="btn">All</button></li>
             <li><button type="button" class="btn">Web Site</button></li>
